[tool.poetry]
name = "Temperature-Agent"
version = "0.1.0"
description = "A Temperature Alert Agent"
authors = ["demoiver Rakada"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
